# doc-ocr-privacy

./: .gitignore  README.md  main.py  pyproject.toml  single_agent_mcp_practice.ipynb
agent/: ocr_privacy_agent.py
mcp_servers/: masking_server.py  ocr_server.py  pii_detection_server.py
samples/: sample_image.txt
